--- a/index.html
+++ b/index.html
@@ -7,33 +7,18 @@
 <script src="jspdf.umd.min.js"></script>
 
 <style>
-body{
-  margin:0;font-family:Arial;
-  background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
-  background-size:cover;background-position:center
-}
+body{margin:0;font-family:Arial;background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");background-size:cover;background-position:center}
 .overlay{background:rgba(0,0,0,.75);min-height:100vh}
-.menu{
-  position:fixed;left:0;top:0;bottom:0;width:70px;
-  background:rgba(0,0,0,.4);
-  display:flex;flex-direction:column;align-items:center;padding-top:20px
-}
-.menu button{
-  background:none;border:none;color:#f1c40f;
-  font-size:22px;margin:15px 0;cursor:pointer
-}
+.menu{position:fixed;left:0;top:0;bottom:0;width:70px;background:rgba(0,0,0,.4);display:flex;flex-direction:column;align-items:center;padding-top:20px}
+.menu button{background:none;border:none;color:#f1c40f;font-size:22px;margin:15px 0;cursor:pointer}
 .content{margin-left:90px;padding:20px;color:#fff}
 .section{display:none}.section.active{display:block}
-input,select,button{
-  padding:8px;border-radius:6px;border:none;margin:4px 0
-}
+input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
 button{cursor:pointer;font-weight:bold}
 table{width:100%;border-collapse:collapse}
 th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .total{font-size:20px;color:#2ecc71}
-.neg{color:#e74c3c}
-.ok{color:#2ecc71}
-.warn{color:#f1c40f}
+.neg{color:#e74c3c}.ok{color:#2ecc71}.warn{color:#f1c40f}
 canvas{background:#111;border-radius:8px;margin-top:10px}
 small{color:#ccc}
 </style>
@@ -50,6 +35,7 @@ small{color:#ccc}
   <button onclick="show('produtos')">📦</button>
   <button onclick="show('despesas')">🧾</button>
   <button onclick="show('mensal')">📆</button>
+  <button onclick="show('historico')">📚</button>
 </div>
 
 <div class="content">
@@ -61,6 +47,10 @@ small{color:#ccc}
 
   <input id="valorAbertura" type="number" placeholder="Valor de abertura">
   <button onclick="abrirCaixa()">Abrir Caixa</button>
+
+  <h4>Período do Caixa</h4>
+  <input type="date" id="periodoInicio">
+  <input type="date" id="periodoFim">
 
   <hr>
 
@@ -79,7 +69,6 @@ small{color:#ccc}
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
   <button onclick="fecharCaixa()">Fechar Caixa</button>
-  <button onclick="pdfFechamento()">📄 PDF Fechamento</button>
 
   <div id="resumoCaixa"></div>
 
@@ -88,6 +77,12 @@ small{color:#ccc}
   <p id="resultadoConferencia"></p>
 
   <canvas id="graficoCaixa" width="380" height="200"></canvas>
+</div>
+
+<!-- ================= HISTÓRICO ================= -->
+<div id="historico" class="section">
+  <h2>Histórico de Fechamentos</h2>
+  <ul id="listaHistorico"></ul>
 </div>
 
 <!-- ================= AGENDA ================= -->
@@ -139,12 +134,10 @@ small{color:#ccc}
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
   <input id="valorDespesa" type="number" placeholder="Valor">
-
   <select id="tipoDespesa">
     <option value="variavel">Variável</option>
     <option value="fixa">Fixa mensal</option>
   </select>
-
   <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
@@ -154,8 +147,6 @@ small{color:#ccc}
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
   <button onclick="gerarRelatorioMensal()">Gerar</button>
-  <button onclick="pdfRelatorioMensal()">📄 PDF</button>
-
   <div id="resumoMensal"></div>
   <canvas id="graficoMensal" width="380" height="200"></canvas>
 </div>
@@ -164,313 +155,113 @@ small{color:#ccc}
 </div>
 
 <script>
-/* =====================================================
-   BASE
-===================================================== */
-function show(id){
-  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
+function show(id){document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));document.getElementById(id).classList.add("active")}
 
-const rawDB = JSON.parse(localStorage.getItem("db")||"{}");
-const db = {
-  clientes: rawDB.clientes||[],
-  planos: rawDB.planos||[],
-  produtos: rawDB.produtos||[],
-  vendas: rawDB.vendas||[],
-  despesas: rawDB.despesas||[],
-  agenda: rawDB.agenda||[],
-  caixa: rawDB.caixa||{aberto:false,abertura:0}
+const rawDB=JSON.parse(localStorage.getItem("db")||"{}");
+const db={
+  clientes:rawDB.clientes||[],
+  planos:rawDB.planos||[],
+  produtos:rawDB.produtos||[],
+  vendas:rawDB.vendas||[],
+  despesas:rawDB.despesas||[],
+  agenda:rawDB.agenda||[],
+  historico:rawDB.historico||[],
+  caixa:rawDB.caixa||{aberto:false,abertura:0}
 };
 
 let carrinho=[];
-let editCliente=null, editPlano=null, editProduto=null, editDespesa=null;
+function save(){localStorage.setItem("db",JSON.stringify(db))}
 
-function save(){ localStorage.setItem("db", JSON.stringify(db)); }
-
-/* =====================================================
-   AGENDA
-===================================================== */
-function gerarHorarios15(){
-  let h=[];
-  for(let i=8;i<=20;i++){
-    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
-  }
-  return h;
-}
-function salvarAgendamento(){
-  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
-    return alert("Horário ocupado");
-  db.agenda.push({
-    data:dataAgenda.value,
-    hora:horaAgenda.value,
-    cliente:clienteAgenda.value,
-    servico:servicoAgenda.value
-  });
-  save(); renderAgenda();
-}
-function renderAgenda(){
-  listaAgenda.innerHTML = db.agenda
-    .filter(a=>a.data===dataAgenda.value)
-    .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`).join("");
-}
-
-/* =====================================================
-   CAIXA
-===================================================== */
+/* ===== CAIXA COM PERÍODO ===== */
 function abrirCaixa(){
   db.caixa.aberto=true;
   db.caixa.abertura=+valorAbertura.value||0;
-  db.vendas=[]; db.despesas=[]; carrinho=[];
-  save(); render();
+  carrinho=[];
+  save();render();
 }
 
 function fecharCaixa(){
-  let pix=0,cartao=0,dinheiro=0,planos=0,qtdVendas=0,qtdPlanos=0;
+  const ini=periodoInicio.value?new Date(periodoInicio.value):null;
+  const fim=periodoFim.value?new Date(periodoFim.value+" 23:59:59"):null;
 
-  db.vendas.forEach(v=>{
-    if(v.tipo==="plano"){
-      planos+=v.total; qtdPlanos++;
-    }else{
-      qtdVendas++;
-      if(v.pagamento==="pix") pix+=v.total;
-      if(v.pagamento==="cartao") cartao+=v.total;
-      if(v.pagamento==="dinheiro") dinheiro+=v.total;
+  let pix=0,cartao=0,dinheiro=0,planos=0;
+
+  const vendasPeriodo=db.vendas.filter(v=>{
+    const dt=new Date(v.data);
+    if(ini&&dt<ini)return false;
+    if(fim&&dt>fim)return false;
+    return true;
+  });
+
+  vendasPeriodo.forEach(v=>{
+    if(v.tipo==="plano")planos+=v.total;
+    else{
+      if(v.pagamento==="pix")pix+=v.total;
+      if(v.pagamento==="cartao")cartao+=v.total;
+      if(v.pagamento==="dinheiro")dinheiro+=v.total;
     }
   });
 
-  const despesas = db.despesas.reduce((s,d)=>s+d.valor,0);
-  const faturamento = pix+cartao+dinheiro+planos;
-  const saldoEsperado = db.caixa.abertura + faturamento - despesas;
+  const despesas=db.despesas
+    .filter(d=>{
+      if(d.tipo==="fixa")return false;
+      const dt=new Date(d.data);
+      if(ini&&dt<ini)return false;
+      if(fim&&dt>fim)return false;
+      return true;
+    })
+    .reduce((s,d)=>s+d.valor,0);
 
-  resumoCaixa.innerHTML = `
-    <h3>Fechamento do Caixa</h3>
-    <p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
-    <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
-    <p>Pix: R$ ${pix.toFixed(2)}</p>
-    <p>Cartão: R$ ${cartao.toFixed(2)}</p>
-    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
-    <p>Planos: R$ ${planos.toFixed(2)}</p>
-    <p>Despesas: R$ ${despesas.toFixed(2)}</p>
-    <p>Qtd vendas: ${qtdVendas}</p>
-    <p>Qtd planos: ${qtdPlanos}</p>
-    <p class="total">Saldo esperado: R$ ${saldoEsperado.toFixed(2)}</p>
-  `;
+  const faturamento=pix+cartao+dinheiro+planos;
+  const saldo=db.caixa.abertura+faturamento-despesas;
 
-  const contado = +dinheiroContado.value||0;
-  const diff = contado - dinheiro;
+  const contado=+dinheiroContado.value||0;
+  const diferenca=contado-dinheiro;
 
-  if(contado===0){
-    resultadoConferencia.innerText="Informe o dinheiro contado";
-    resultadoConferencia.className="warn";
-  }else if(diff===0){
-    resultadoConferencia.innerText="✔ Caixa conferido";
-    resultadoConferencia.className="ok";
-  }else if(diff<0){
-    resultadoConferencia.innerText=`❌ Falta R$ ${Math.abs(diff).toFixed(2)}`;
-    resultadoConferencia.className="neg";
-  }else{
-    resultadoConferencia.innerText=`⚠️ Sobra R$ ${diff.toFixed(2)}`;
-    resultadoConferencia.className="warn";
-  }
-
-  desenharGraficoCaixa(pix,cartao,dinheiro,despesas,saldoEsperado);
-
-  db.caixa.aberto=false;
-  save(); render();
-}
-
-/* =====================================================
-   PDV
-===================================================== */
-function addItem(){
-  const [nome,valor,tipo]=produto.value.split("|");
-  carrinho.push({nome,valor:+valor});
-  renderCarrinho();
-}
-function finalizarVenda(){
-  const total=carrinho.reduce((s,i)=>s+i.valor,0);
-  db.vendas.push({
-    data:new Date().toLocaleString(),
-    cliente:cliente.value,
-    pagamento:pagamento.value,
-    total
+  db.historico.push({
+    periodo:`${periodoInicio.value} até ${periodoFim.value}`,
+    abertura:db.caixa.abertura,
+    faturamento,
+    pix,cartao,dinheiro,planos,
+    despesas,
+    saldo,
+    contado,
+    diferenca,
+    dataFechamento:new Date().toLocaleString()
   });
-  carrinho=[]; save(); render();
-}
-function renderCarrinho(){
-  let h="<tr><th>Item</th><th>Valor</th></tr>", s=0;
-  carrinho.forEach(i=>{
-    h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
-    s+=i.valor;
-  });
-  carrinho.innerHTML=h;
-  total.innerText=s.toFixed(2);
+
+  save();render();
 }
 
-/* =====================================================
-   CRUD COM EDIÇÃO REAL
-===================================================== */
-function salvarCliente(){
-  const plano=db.planos.find(p=>p.nome===planoCliente.value);
-  const obj={nome:nomeCliente.value,plano:plano?plano.nome:null,saldo:plano?plano.qtd:0};
-
-  if(editCliente!==null) db.clientes[editCliente]=obj;
-  else db.clientes.push(obj);
-
-  if(plano){
-    db.vendas.push({
-      data:new Date().toLocaleString(),
-      cliente:obj.nome,
-      pagamento:"plano",
-      total:plano.valor,
-      tipo:"plano"
-    });
-  }
-
-  editCliente=null; save(); render();
-}
-
-function salvarPlano(){
-  const obj={nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value};
-  editPlano!==null ? db.planos[editPlano]=obj : db.planos.push(obj);
-  editPlano=null; save(); render();
-}
-
-function salvarProduto(){
-  const obj={nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value};
-  editProduto!==null ? db.produtos[editProduto]=obj : db.produtos.push(obj);
-  editProduto=null; save(); render();
-}
-
-function salvarDespesa(){
-  const obj={
-    desc:descDespesa.value,
-    valor:+valorDespesa.value,
-    tipo:tipoDespesa.value,
-    data:new Date().toLocaleString()
-  };
-  editDespesa!==null ? db.despesas[editDespesa]=obj : db.despesas.push(obj);
-  editDespesa=null; save(); render();
-}
-
-/* =====================================================
-   RELATÓRIO MENSAL (DESPESA FIXA)
-===================================================== */
+/* ===== RELATÓRIO MENSAL ===== */
 function gerarRelatorioMensal(){
   const [ano,m]=mesRelatorio.value.split("-");
-  const vendas=db.vendas.filter(v=>{
-    const d=new Date(v.data);
-    return d.getFullYear()==ano && (d.getMonth()+1)==m;
-  });
-
+  const vendas=db.vendas.filter(v=>{const d=new Date(v.data);return d.getFullYear()==ano&&(d.getMonth()+1)==m});
   const despesas=db.despesas.filter(d=>{
-    if(d.tipo==="fixa") return true;
+    if(d.tipo==="fixa")return true;
     const dt=new Date(d.data);
-    return dt.getFullYear()==ano && (dt.getMonth()+1)==m;
+    return dt.getFullYear()==ano&&(dt.getMonth()+1)==m;
   });
-
-  const faturamento=vendas.reduce((s,v)=>s+v.total,0);
-  const totalDesp=despesas.reduce((s,d)=>s+d.valor,0);
-  const lucro=faturamento-totalDesp;
-
-  resumoMensal.innerHTML=`
-    <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
-    <p>Despesas: R$ ${totalDesp.toFixed(2)}</p>
-    <p class="total">Lucro líquido: R$ ${lucro.toFixed(2)}</p>
-  `;
-
-  desenharGraficoMensal(faturamento,totalDesp,lucro);
+  const fat=vendas.reduce((s,v)=>s+v.total,0);
+  const desp=despesas.reduce((s,d)=>s+d.valor,0);
+  const lucro=fat-desp;
+  resumoMensal.innerHTML=`<p>Faturamento: R$ ${fat.toFixed(2)}</p><p>Despesas: R$ ${desp.toFixed(2)}</p><p class="total">Lucro: R$ ${lucro.toFixed(2)}</p>`;
 }
 
-/* =====================================================
-   GRÁFICOS
-===================================================== */
-function desenharGraficoCaixa(pix,cartao,dinheiro,desp,saldo){
-  const g=graficoCaixa.getContext("2d");
-  g.clearRect(0,0,380,200);
-  const vals=[pix,cartao,dinheiro,desp,saldo];
-  const labels=["Pix","Cartão","Dinheiro","Despesas","Saldo"];
-  const cores=["#2ecc71","#3498db","#f1c40f","#e74c3c","#9b59b6"];
-  const max=Math.max(...vals,1);
-  vals.forEach((v,i)=>{
-    const h=(v/max)*120;
-    g.fillStyle=cores[i];
-    g.fillRect(30+i*65,160-h,40,h);
-    g.fillText(labels[i],30+i*65,180);
-  });
-}
-
-function desenharGraficoMensal(fat,desp,luc){
-  const g=graficoMensal.getContext("2d");
-  g.clearRect(0,0,380,200);
-  const vals=[fat,desp,luc];
-  const labels=["Faturamento","Despesas","Lucro"];
-  const cores=["#2ecc71","#e74c3c","#3498db"];
-  const max=Math.max(...vals,1);
-  vals.forEach((v,i)=>{
-    const h=(v/max)*120;
-    g.fillStyle=cores[i];
-    g.fillRect(60+i*100,160-h,50,h);
-    g.fillText(labels[i],60+i*100,180);
-  });
-}
-
-/* =====================================================
-   PDF
-===================================================== */
-function pdfFechamento(){
-  const {jsPDF}=window.jspdf;
-  const pdf=new jsPDF();
-  let y=10;
-  pdf.text("FECHAMENTO DE CAIXA",10,y); y+=10;
-  pdf.text("Abertura: R$ "+db.caixa.abertura.toFixed(2),10,y); y+=10;
-  db.vendas.forEach(v=>{
-    pdf.text(`${v.data} | ${v.cliente||"—"} | ${v.pagamento} | R$ ${v.total.toFixed(2)}`,10,y);
-    y+=8;
-  });
-  pdf.save("fechamento-caixa.pdf");
-}
-
-function pdfRelatorioMensal(){
-  const {jsPDF}=window.jspdf;
-  const pdf=new jsPDF();
-  pdf.text("RELATÓRIO MENSAL",10,10);
-  pdf.text(resumoMensal.innerText,10,20);
-  pdf.save("relatorio-mensal.pdf");
-}
-
-/* =====================================================
-   RENDER
-===================================================== */
+/* ===== RENDER ===== */
 function render(){
   statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
 
-  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  clienteAgenda.innerHTML=cliente.innerHTML;
-
-  planoCliente.innerHTML=`<option value="">Sem plano</option>`+
-    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
-
-  tipoPlano.innerHTML=db.produtos
-    .filter(p=>p.tipo==="servico")
-    .map(p=>`<option>${p.nome}</option>`).join("");
-
-  produto.innerHTML=db.produtos
-    .map(p=>`<option value="${p.nome}|${p.valor}|${p.tipo}">${p.nome}</option>`).join("");
-
-  servicoAgenda.innerHTML=db.produtos
-    .filter(p=>p.tipo==="servico")
-    .map(p=>`<option>${p.nome}</option>`).join("");
-
-  horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
-
-  listaDespesas.innerHTML=db.despesas.map((d,i)=>
-    `<li>${d.desc} | R$ ${d.valor.toFixed(2)} | ${d.tipo}</li>`
-  ).join("");
-
-  renderCarrinho();
-  renderAgenda();
+  listaHistorico.innerHTML=db.historico.map(h=>`
+    <li>
+      <b>${h.periodo}</b><br>
+      Faturamento: R$ ${h.faturamento.toFixed(2)}<br>
+      Despesas: R$ ${h.despesas.toFixed(2)}<br>
+      Saldo: R$ ${h.saldo.toFixed(2)}<br>
+      Diferença: R$ ${h.diferenca.toFixed(2)}<br>
+      <small>${h.dataFechamento}</small>
+    </li>
+  `).join("");
 }
 render();
 </script>
